# nexus-calendario-estudo-enem

./: main.py  pyproject.toml  readme.md
.github/workflows/: ci.yml
app/api/: routes.py
app/models/: schemas.py
app/services/: calcular_divisao_tempo.py  criar_plano_estudo.py
tests/: test_main.py  test_routes.py  test_services.py
